--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect -->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
 
 
 
